Header now splits values on ","